// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no close button in "deleted" variant 1`] = `
.emotion-3 {
  border: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding: 0.5rem;
  background: transparent;
  -webkit-transition: background 0.1s ease-in-out;
  transition: background 0.1s ease-in-out;
  border-left: 1px solid #AEC1CC;
}

.emotion-3:hover,
.emotion-3:focus {
  background: #CFD9E0;
  cursor: pointer;
}

.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
  fill: #5A657C;
  vertical-align: middle;
}

.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
}

<div
  class="my-extra-class emotion-4"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
  <button
    aria-label="close"
    class="emotion-3"
    type="button"
  >
    <span
      class="emotion-2"
      tabindex="-1"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

<div
  class="emotion-1"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "active" variant 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #CFD9E0;
}

<div
  class="my-extra-class emotion-1"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "deleted" variant 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  opacity: 0.5;
}

<div
  class="my-extra-class emotion-1"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "idle" variant by default 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

<div
  class="my-extra-class emotion-1"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a close button 1`] = `
.emotion-3 {
  border: none;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding: 0.5rem;
  background: transparent;
  -webkit-transition: background 0.1s ease-in-out;
  transition: background 0.1s ease-in-out;
  border-left: 1px solid #AEC1CC;
}

.emotion-3:hover,
.emotion-3:focus {
  background: #CFD9E0;
  cursor: pointer;
}

.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

.emotion-1 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
  fill: #5A657C;
  vertical-align: middle;
}

.emotion-2 {
  display: inherit;
  outline: 0;
}

<div
  class="my-extra-class emotion-4"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
  <button
    aria-label="close"
    class="emotion-3"
    type="button"
  >
    <span
      class="emotion-2"
      tabindex="-1"
    >
      <svg
        class="emotion-1"
        data-test-id="cf-ui-icon"
        viewBox="0 0 24 24"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with a dragging handle 1`] = `
.emotion-2 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  padding: 0.5rem;
  padding-right: 0;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
  fill: #5A657C;
  vertical-align: middle;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="Drag handler"
    class="emotion-1"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </span>
  <span
    class="emotion-2"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a test id 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

<div
  class="my-extra-class emotion-1"
  data-test-id="test-id"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  color: #414D63;
  line-height: 1.25rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  border: none;
  padding: 0;
  max-width: 100%;
  background: #E7EBEE;
}

<div
  class="my-extra-class emotion-1"
  data-test-id="cf-ui-pill"
>
  <span
    class="emotion-0"
    title="test"
  >
    test
  </span>
</div>
`;
